[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/RuleBox.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="RuleBox" type="HBoxContainer"]
margin_right = 235.0
margin_bottom = 34.0
rect_min_size = Vector2( 235, 0 )
script = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_right = 6.0
margin_bottom = 34.0
custom_constants/separation = 6
custom_styles/separator = SubResource( 1 )

[node name="Visual" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_right = 23.0
margin_bottom = 34.0
custom_constants/separation = 1

[node name="FromColor" type="ColorRect" parent="Visual"]
margin_right = 6.0
margin_bottom = 34.0
rect_min_size = Vector2( 6, 0 )

[node name="ToColor" type="ColorRect" parent="Visual"]
margin_left = 7.0
margin_right = 13.0
margin_bottom = 34.0
rect_min_size = Vector2( 6, 14 )

[node name="SliderContainer" type="VBoxContainer" parent="."]
margin_left = 27.0
margin_right = 235.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="SliderLabels" type="HBoxContainer" parent="SliderContainer"]
margin_right = 208.0
margin_bottom = 14.0

[node name="Attraction" type="Label" parent="SliderContainer/SliderLabels"]
margin_right = 102.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 0.458824 )
text = "g: 0.0"
align = 1

[node name="Range" type="Label" parent="SliderContainer/SliderLabels"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 0.458824 )
text = "r: 20.0"
align = 1

[node name="Sliders" type="HBoxContainer" parent="SliderContainer"]
margin_top = 18.0
margin_right = 208.0
margin_bottom = 34.0

[node name="AttractionSlider" type="HSlider" parent="SliderContainer/Sliders"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 102.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = -100.0
step = 0.1
tick_count = 5

[node name="RangeSlider" type="HSlider" parent="SliderContainer/Sliders"]
modulate = Color( 1, 1, 1, 0.588235 )
margin_left = 106.0
margin_right = 208.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 400.0

[connection signal="value_changed" from="SliderContainer/Sliders/AttractionSlider" to="." method="_on_AttractionSlider_value_changed"]
[connection signal="value_changed" from="SliderContainer/Sliders/RangeSlider" to="." method="_on_RangeSlider_value_changed"]
